# rvtdocs-mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml
benchmarks/: benchmark-spec.v1.md  query-seeds.v1.json
src/: __init__.py  async_fetcher.py  benchmark_runner.py  cache_store.py  calibration.py  compact.py  confidence_config.py  config.py  extractor.py  fetcher.py  html_parser.py  models.py  router.py  schemas.py  server.py  session_store.py  telemetry.py
src/benchmarking/: __init__.py  calibration_metrics.py  evaluator.py  models.py  namespace_inventory.py  rare_matrix.py  reporter.py  runner.py  seed_loader.py
src/data/: namespace_index_2025.json
src/docs/: README.md  architecture.md  setup.md  token-efficiency.md  workflows.md
src/docs/tools/: README.md  rvtdocs-batch.md  rvtdocs-debug.md  rvtdocs-fetch.md  rvtdocs-scan.md  rvtdocs-schema.md  rvtdocs-session.md  rvtdocs-stats.md  rvtdocs-version-info.md
src/indexing/: scraper.py
src/routing/: __init__.py  canonicalization.py  constants.py  namespace_index.py  resolver.py  suggestions.py
src/search/: __init__.py  tree_index.py
src/tools/: __init__.py  diff.py  fetch.py  scan.py  search.py
