[project]
name = "rvtdocs-mcp"
version = "0.2.0"
description = "Deterministic RVTDocs MCP server for low-retry API lookups"
requires-python = ">=3.14"
dependencies = [
	"mcp>=1.28.1",
	"httpx>=0.28",
	"trafilatura>=2.0.0",
	"readability-lxml>=0.8.4.1",
	"selectolax>=0.4.10",
	"pydantic>=2.13.4",
]

[project.scripts]
rvtdocs-mcp = "src.server:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
