[project]
name = "rvtdocs-mcp"
version = "1.0.0"
description = "Local search-first Revit API documentation MCP server"
requires-python = ">=3.12"
dependencies = [
	"mcp>=1.28.1",
	"httpx>=0.28",
	"trafilatura>=2.0.0",
]

[project.scripts]
rvtdocs-mcp = "src.server:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
